# klickbrick-cli

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  pyproject.toml
features/: checklist.feature  checkllist.feature  environment.py  events.feature  hello.feature  help.feature  init.feature  install_tools.feature  templated_email.feature
features/steps/: checklist.py  checkllist.py  events.py  hello.py  help.py  init.py  install_tools.py  templated_email.py
klickbrick_cli/: checklist.py  hello.py  installer.py  klickbrick.py
klickbrick_cli/resources/: CONTRIBUTING.md  email.template
openapi/: events.yml
server/: __init__.py  app.py  events_server.py
server/openapi/: events.yml
tests/: test_events_server.py  test_hello.py  test_klickbrick_cli.py
